sdk/kotlin/gopher-mcp-kotlin/src/main/kotlin/com/gopher/mcp/jna/McpFilterBufferLibrary.kt


    /**
     * Check if buffer is empty (line 407)
     *
     * @param buffer Buffer handle
     * @return MCP_TRUE if empty
     */
    fun mcp_buffer_is_empty(buffer: Long): Byte

    /**
     * Get buffer statistics (line 415)
     *
     * @param buffer Buffer handle
     * @param stats Output statistics
     * @return MCP_OK on success
     */
    fun mcp_buffer_get_stats(buffer: Long, stats: McpBufferStats.ByReference?): Int

    /* ============================================================================
     * Buffer Watermarks (lines 421-452)
     * ============================================================================
     */

    /**
     * Set buffer watermarks for flow control (line 431)
     *
     * @param buffer Buffer handle
     * @param low_watermark Low watermark bytes
     * @param high_watermark High watermark bytes
     * @param overflow_watermark Overflow watermark bytes
     * @return MCP_OK on success
     */
    fun mcp_buffer_set_watermarks(
        buffer: Long,
        low_watermark: NativeLong,
        high_watermark: NativeLong,
        overflow_watermark: NativeLong
    ): Int

    /**
     * Check if buffer is above high watermark (line 442)
     *
     * @param buffer Buffer handle
     * @return MCP_TRUE if above high watermark
     */
    fun mcp_buffer_above_high_watermark(buffer: Long): Byte

    /**
     * Check if buffer is below low watermark (line 450)
     *
     * @param buffer Buffer handle
     * @return MCP_TRUE if below low watermark
     */
    fun mcp_buffer_below_low_watermark(buffer: Long): Byte

    /* ============================================================================
     * Advanced Buffer Pool (lines 457-496)
     * ============================================================================
     */

    /**
     * Create buffer pool with configuration (line 471)
     *
     * @param config Pool configuration
     * @return Buffer pool handle or NULL on error
     */
    fun mcp_buffer_pool_create_ex(config: McpBufferPoolConfig.ByReference?): Pointer?

    /**
     * Get pool statistics (line 482)
     *
     * @param pool Buffer pool
     * @param free_count Output: free buffers
     * @param used_count Output: used buffers
     * @param total_allocated Output: total bytes allocated
     * @return MCP_OK on success
     */
    fun mcp_buffer_pool_get_stats(
        pool: Pointer?,
        free_count: PointerByReference?,
        used_count: PointerByReference?,
        total_allocated: PointerByReference?
    ): Int

    /**
     * Trim pool to reduce memory usage (line 494)
     *
     * @param pool Buffer pool
     * @param target_free Target number of free buffers
     * @return MCP_OK on success
     */
    fun mcp_buffer_pool_trim(pool: Pointer?, target_free: NativeLong): Int
}